# web-of-agents

./: .gitignore  README.md  requirements.txt  setup.cfg
eval/: agent.ipynb  collabAgent.ipynb  medicalAgent.ipynb
src/webofagents/core/: models.py  tools.py
src/webofagents/node/: events.py  routes.py  server.py
tests/: test_server.py
