[metadata]
name = webofagents
version = 0.1.dev0
author = Rishi Sharma
author_email = rishi.sharma@epfl.ch
license = MIT
description = Repository for the Web of Agents Infrastructure
keywords =
    python
    decentralized
    agents
    web
    communication
long_description = file: README.rst
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: CC-BY-NC-SA-4.0
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Topic :: Scientific/Engineering
[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
include_package_data = True
python_requires = >=3.11
[options.packages.find]
where = src
[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings
    mpl_image_compare
[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
